Initial commit of Testable Monodroid samples

--- a/ApiDemo/ApiDemo.csproj
+++ b/ApiDemo/ApiDemo.csproj
@@ -261,5 +261,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="View\" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidJavaSource Include="server-standalone.jar" />
+  </ItemGroup>
 </Project>
