--- a/ApiDemo/Properties/AndroidManifest.xml
+++ b/ApiDemo/Properties/AndroidManifest.xml
@@ -3,6 +3,12 @@
   <application android:label="MonoDroidApiDemo">
   </application>
   <uses-sdk android:minSdkVersion="4" />
+  <instrumentation
+     android:targetPackage="mono.samples.apidemo"
+     android:name="com.google.android.testing.nativedriver.server.ServerInstrumentation" />
+  <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.INTERNET" />
