--- a/Button/Properties/AndroidManifest.xml
+++ b/Button/Properties/AndroidManifest.xml
@@ -1,3 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="mono.samples.button">
+	<application />
+	<uses-sdk />
+	<instrumentation
+	     android:targetPackage="mono.samples.button"
+	     android:name="com.google.android.testing.nativedriver.server.ServerInstrumentation" />
+	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
