--- a/ContactManager/Properties/AndroidManifest.xml
+++ b/ContactManager/Properties/AndroidManifest.xml
@@ -3,6 +3,12 @@
   <application android:label="ContactManager">
   </application>
   <uses-sdk android:minSdkVersion="4" />
+	<instrumentation
+     android:targetPackage="contactmanager.contactmanager"
+     android:name="com.google.android.testing.nativedriver.server.ServerInstrumentation" />
+  <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-permission android:name="android.permission.GET_ACCOUNTS" />
   <uses-permission android:name="android.permission.READ_CONTACTS" />
 </manifest>
