Updated the AllProjects file

--- a/AllProjects.csproj
+++ b/AllProjects.csproj
@@ -2,12 +2,45 @@
 <Project ToolsVersion="4.0" DefaultTargets="Froyo" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<ItemGroup>
 		<FroyoProjects
-			Include="@(GingerbreadProjects)"
-			Exclude="$(MSBuildStartupDirectory)\AppProjects.csproj;" />	
+			Include="$(MSBuildStartupDirectory)\**\*.csproj"
+			Exclude="$(MSBuildStartupDirectory)\AllProjects.csproj;
+				 $(MSBuildStartupDirectory)\ContactsProviderDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\GridLayoutDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\HelloTabsICS\*.csproj;
+				 $(MSBuildStartupDirectory)\PopupMenuDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\ShareActionProviderDemo\*csproj;
+				 $(MSBuildStartupDirectory)\SwitchDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\SystemUIVisibilityDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\TextureViewDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\SearchableDictionary\*.csproj;
+				 
+	 			 $(MSBuildStartupDirectory)\HoneycombGallery\*.csproj;
+				 $(MSBuildStartupDirectory)\CalendarDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\GLDiagnostics\*.csproj;
+				 $(MSBuildStartupDirectory)\JniDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\MapsAndLocationDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\MapsDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\SanityTests\*.csproj;
+				 $(MSBuildStartupDirectory)\Facebook\**;
+				 $(MSBuildStartupDirectory)\SPenSdkBinding\**;
+				 $(MSBuildStartupDirectory)\SvgAndroid\**;
+				 $(MSBuildStartupDirectory)\DynamicTest\**;
+				 $(MSBuildStartupDirectory)\AdMob\**;
+				 $(MSBuildStartupDirectory)\ContactManager\*.csproj" />	
 		<GingerbreadProjects
-			Include="@(HoneyCombProjects)"
-			Exclude=" $(MSBuildStartupDirectory)\HoneycombGallery\*.csproj;
-				 $(MSBuildStartupDirectory)\AppProjects.csproj;
+			Include="$(MSBuildStartupDirectory)\**\*.csproj"
+			Exclude="$(MSBuildStartupDirectory)\AllProjects.csproj;
+				 $(MSBuildStartupDirectory)\ContactsProviderDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\GridLayoutDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\HelloTabsICS\*.csproj;
+				 $(MSBuildStartupDirectory)\PopupMenuDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\ShareActionProviderDemo\*csproj;
+				 $(MSBuildStartupDirectory)\SwitchDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\SystemUIVisibilityDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\TextureViewDemo\*.csproj;
+				 $(MSBuildStartupDirectory)\SearchableDictionary\*.csproj;
+				 
+	 			 $(MSBuildStartupDirectory)\HoneycombGallery\*.csproj;
 				 $(MSBuildStartupDirectory)\CalendarDemo\*.csproj;
 				 $(MSBuildStartupDirectory)\GLDiagnostics\*.csproj;
 				 $(MSBuildStartupDirectory)\JniDemo\*.csproj;
@@ -21,8 +54,8 @@
 				 $(MSBuildStartupDirectory)\AdMob\**;
 				 $(MSBuildStartupDirectory)\ContactManager\*.csproj" />
 		<HoneyCombProjects
-			Include="@(IceCreamSandwichProjects)"
-			Exclude="$(MSBuildStartupDirectory)\AppProjects.csproj;
+			Include="$(MSBuildStartupDirectory)\**\*.csproj"
+			Exclude="$(MSBuildStartupDirectory)\**\*.csproj;
 				 $(MSBuildStartupDirectory)\ContactsProviderDemo\*.csproj;
 				 $(MSBuildStartupDirectory)\GridLayoutDemo\*.csproj;
 				 $(MSBuildStartupDirectory)\HelloTabsICS\*.csproj;
@@ -34,7 +67,7 @@
 				 $(MSBuildStartupDirectory)\SearchableDictionary\*.csproj;" />
 		<IceCreamSandwichProjects
 			Include="$(MSBuildStartupDirectory)\**\*.csproj"
-			Exclude="$(MSBuildStartupDirectory)\AppProjects.csproj;" />
+			Exclude="$(MSBuildStartupDirectory)\AllProjects.csproj;" />
 	</ItemGroup>
 	<Target Condition="'$(AndroidPlatform)' == 'Froyo'"
 		Name="Build"
